--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@testing-library/user-event": "^13.1.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "redux": "^4.1.0"
   },
   "eslintConfig": {
     "extends": [
